2005-08-07  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-cairo-draw.c (rsvg_cairo_render_path): Implement line join, cap, width, dash, miter limit
	(rsvg_cairo_render_image): Drawing images now works
	(rsvg_cairo_push_discrete_layer): Largely implemented
	(rsvg_cairo_pop_discrete_layer): Largely implemented
	(_set_source_rsvg_radial_gradient): Make this work for the few tests I have

	* rsvg.c (rsvg_handle_get_pixbuf): Implement this in terms of libart, cairo, or nothing depending on what's enabled at configure time.
	Defaults to libart, simply because the cairo backend is currently immature. This will change in due time...
	* configure.in: Do the hackery necessary to determine what backend to use in rsvg_handle_get_pixbuf()
	* Makefile.am: Ditto; make sure that librsvg-2.la is always installed (though it may not always work...)
	
2005-08-04  Carl Worth  <cworth@cworth.org>

	* .cvsignore: Ignore rsvg-cairo and rsvg-view.
	
	* Makefile.am: Add new rsvg-cairo program.
	
	* rsvg-cairo-draw.c: (rsvg_cairo_render_path): Fix MOVETO and
	LINETO to pull the right coordinates out of the path structure so
	they don't always draw to (0,0).
	
	* rsvg-cairo.h:

	* rsvg-cairo-render.c: (rsvg_cairo_render): New header file,
	(intended to be public) which adds a single function for rendering
	with cairo:

		void rsvg_cairo_render (cairo_t *cr, RsvgHandle *handle);
	
	* rsvg-cairo.c: (main): Add new test program rsvg-cairo.

2005-08-03  Carl Worth  <cworth@cworth.org>

	* test-display.c: (print_pixbuf), (save_svg), (main):
	* gdk-pixbuf-loader/io-svg.c: (fill_info):
	* gtk-engine/svg-render.c: (svg_cache_value_new):
	* rsvg-art-paint-server.c: (rsvg_art_paint_server_lin_grad_render),
	(rsvg_art_paint_server_rad_grad_render):
	Add more casts to quiet the gcc4 warnings. Some of these are
	particularly annoying and show the dangers of API functions that
	use unsigned char* for character strings. We now have casts for
	string literals (yuck!). In a few places I was able to change the